@@ -1,11 +1,11 @@
 /*
- * Copyright 2012-2017 the original author or authors.
+ * Copyright 2012-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -19,13 +19,13 @@ package org.springframework.boot.gradle.tasks.run;
 import java.io.File;
 import java.io.IOException;
 
+import org.gradle.api.JavaVersion;
 import org.gradle.testkit.runner.BuildResult;
 import org.gradle.testkit.runner.TaskOutcome;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.TestTemplate;
+import org.junit.jupiter.api.extension.ExtendWith;
 
-import org.springframework.boot.gradle.junit.GradleCompatibilitySuite;
+import org.springframework.boot.gradle.junit.GradleCompatibilityExtension;
 import org.springframework.boot.gradle.testkit.GradleBuild;
 import org.springframework.util.FileSystemUtils;
 
@@ -36,81 +36,102 @@ import static org.assertj.core.api.Assertions.assertThat;
  *
  * @author Andy Wilkinson
  */
-@RunWith(GradleCompatibilitySuite.class)
-public class BootRunIntegrationTests {
+@ExtendWith(GradleCompatibilityExtension.class)
+class BootRunIntegrationTests {
 
-	@Rule
-	public GradleBuild gradleBuild;
+	GradleBuild gradleBuild;
 
-	@Test
-	public void basicExecution() throws IOException {
-		copyApplication();
+	@TestTemplate
+	void basicExecution() throws IOException {
+		copyClasspathApplication();
 		new File(this.gradleBuild.getProjectDir(), "src/main/resources").mkdirs();
 		BuildResult result = this.gradleBuild.build("bootRun");
 		assertThat(result.task(":bootRun").getOutcome()).isEqualTo(TaskOutcome.SUCCESS);
-		assertThat(result.getOutput())
-				.contains("1. " + canonicalPathOf("build/classes/java/main"));
-		assertThat(result.getOutput())
-				.contains("2. " + canonicalPathOf("build/resources/main"));
-		assertThat(result.getOutput())
-				.doesNotContain(canonicalPathOf("src/main/resources"));
+		assertThat(result.getOutput()).contains("1. " + canonicalPathOf("build/classes/java/main"));
+		assertThat(result.getOutput()).contains("2. " + canonicalPathOf("build/resources/main"));
+		assertThat(result.getOutput()).doesNotContain(canonicalPathOf("src/main/resources"));
 	}
 
-	@Test
-	public void sourceResourcesCanBeUsed() throws IOException {
-		copyApplication();
+	@TestTemplate
+	void sourceResourcesCanBeUsed() throws IOException {
+		copyClasspathApplication();
 		BuildResult result = this.gradleBuild.build("bootRun");
 		assertThat(result.task(":bootRun").getOutcome()).isEqualTo(TaskOutcome.SUCCESS);
-		assertThat(result.getOutput())
-				.contains("1. " + canonicalPathOf("src/main/resources"));
-		assertThat(result.getOutput())
-				.contains("2. " + canonicalPathOf("build/classes/java/main"));
-		assertThat(result.getOutput())
-				.doesNotContain(canonicalPathOf("build/resources/main"));
+		assertThat(result.getOutput()).contains("1. " + canonicalPathOf("src/main/resources"));
+		assertThat(result.getOutput()).contains("2. " + canonicalPathOf("build/classes/java/main"));
+		assertThat(result.getOutput()).doesNotContain(canonicalPathOf("build/resources/main"));
 	}
 
-	@Test
-	public void springBootExtensionMainClassNameIsUsed() throws IOException {
+	@TestTemplate
+	void springBootExtensionMainClassNameIsUsed() throws IOException {
 		BuildResult result = this.gradleBuild.build("echoMainClassName");
-		assertThat(result.task(":echoMainClassName").getOutcome())
-				.isEqualTo(TaskOutcome.UP_TO_DATE);
-		assertThat(result.getOutput())
-				.contains("Main class name = com.example.CustomMainClass");
+		assertThat(result.task(":echoMainClassName").getOutcome()).isEqualTo(TaskOutcome.UP_TO_DATE);
+		assertThat(result.getOutput()).contains("Main class name = com.example.CustomMainClass");
 	}
 
-	@Test
-	public void applicationPluginMainClassNameIsUsed() throws IOException {
+	@TestTemplate
+	void applicationPluginMainClassNameIsUsed() throws IOException {
 		BuildResult result = this.gradleBuild.build("echoMainClassName");
-		assertThat(result.task(":echoMainClassName").getOutcome())
-				.isEqualTo(TaskOutcome.UP_TO_DATE);
-		assertThat(result.getOutput())
-				.contains("Main class name = com.example.CustomMainClass");
+		assertThat(result.task(":echoMainClassName").getOutcome()).isEqualTo(TaskOutcome.UP_TO_DATE);
+		assertThat(result.getOutput()).contains("Main class name = com.example.CustomMainClass");
 	}
 
-	@Test
-	public void applicationPluginMainClassNameIsNotUsedWhenItIsNull() throws IOException {
-		copyApplication();
+	@TestTemplate
+	void applicationPluginMainClassNameIsNotUsedWhenItIsNull() throws IOException {
+		copyClasspathApplication();
 		BuildResult result = this.gradleBuild.build("echoMainClassName");
-		assertThat(result.task(":echoMainClassName").getOutcome())
-				.isEqualTo(TaskOutcome.SUCCESS);
-		assertThat(result.getOutput())
-				.contains("Main class name = com.example.BootRunApplication");
+		assertThat(result.task(":echoMainClassName").getOutcome()).isEqualTo(TaskOutcome.SUCCESS);
+		assertThat(result.getOutput()).contains("Main class name = com.example.classpath.BootRunClasspathApplication");
 	}
 
-	@Test
-	public void applicationPluginJvmArgumentsAreUsed() throws IOException {
-		BuildResult result = this.gradleBuild.build("echoJvmArguments");
-		assertThat(result.task(":echoJvmArguments").getOutcome())
-				.isEqualTo(TaskOutcome.UP_TO_DATE);
-		assertThat(result.getOutput())
-				.contains("JVM arguments = [-Dcom.foo=bar, -Dcom.bar=baz]");
+	@TestTemplate
+	void defaultJvmArgs() throws IOException {
+		copyJvmArgsApplication();
+		BuildResult result = this.gradleBuild.build("bootRun");
+		assertThat(result.task(":bootRun").getOutcome()).isEqualTo(TaskOutcome.SUCCESS);
+		if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_13)) {
+			assertThat(result.getOutput()).contains("1. -XX:TieredStopAtLevel=1");
+		}
+		else {
+			assertThat(result.getOutput()).contains("1. -Xverify:none").contains("2. -XX:TieredStopAtLevel=1");
+		}
 	}
 
-	private void copyApplication() throws IOException {
-		File output = new File(this.gradleBuild.getProjectDir(),
-				"src/main/java/com/example");
+	@TestTemplate
+	void optimizedLaunchDisabledJvmArgs() throws IOException {
+		copyJvmArgsApplication();
+		BuildResult result = this.gradleBuild.build("bootRun");
+		assertThat(result.task(":bootRun").getOutcome()).isEqualTo(TaskOutcome.SUCCESS);
+		assertThat(result.getOutput()).doesNotContain("-Xverify:none").doesNotContain("-XX:TieredStopAtLevel=1");
+	}
+
+	@TestTemplate
+	void applicationPluginJvmArgumentsAreUsed() throws IOException {
+		copyJvmArgsApplication();
+		BuildResult result = this.gradleBuild.build("bootRun");
+		assertThat(result.task(":bootRun").getOutcome()).isEqualTo(TaskOutcome.SUCCESS);
+		if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_13)) {
+			assertThat(result.getOutput()).contains("1. -Dcom.bar=baz").contains("2. -Dcom.foo=bar")
+					.contains("3. -XX:TieredStopAtLevel=1");
+		}
+		else {
+			assertThat(result.getOutput()).contains("1. -Dcom.bar=baz").contains("2. -Dcom.foo=bar")
+					.contains("3. -Xverify:none").contains("4. -XX:TieredStopAtLevel=1");
+		}
+	}
+
+	private void copyClasspathApplication() throws IOException {
+		copyApplication("classpath");
+	}
+
+	private void copyJvmArgsApplication() throws IOException {
+		copyApplication("jvmargs");
+	}
+
+	private void copyApplication(String name) throws IOException {
+		File output = new File(this.gradleBuild.getProjectDir(), "src/main/java/com/example/" + name);
 		output.mkdirs();
-		FileSystemUtils.copyRecursively(new File("src/test/java/com/example"), output);
+		FileSystemUtils.copyRecursively(new File("src/test/java/com/example/" + name), output);
 	}
 
 	private String canonicalPathOf(String path) throws IOException {
