@@ -1,11 +1,11 @@
 /*
- * Copyright 2012-2018 the original author or authors.
+ * Copyright 2012-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -17,6 +17,7 @@
 package org.springframework.boot.maven;
 
 import java.io.File;
+import java.lang.reflect.Method;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.List;
@@ -26,20 +27,22 @@ import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugins.annotations.Execute;
 import org.apache.maven.plugins.annotations.LifecyclePhase;
 import org.apache.maven.plugins.annotations.Mojo;
+import org.apache.maven.plugins.annotations.Parameter;
 import org.apache.maven.plugins.annotations.ResolutionScope;
 
-import org.springframework.boot.loader.tools.JavaExecutable;
 import org.springframework.boot.loader.tools.RunProcess;
 
 /**
- * Run an executable archive application.
+ * Run an application in place.
  *
  * @author Phillip Webb
  * @author Dmytro Nosan
  * @author Stephane Nicoll
  * @author Andy Wilkinson
+ * @since 1.0.0
  */
-@Mojo(name = "run", requiresProject = true, defaultPhase = LifecyclePhase.VALIDATE, requiresDependencyResolution = ResolutionScope.TEST)
+@Mojo(name = "run", requiresProject = true, defaultPhase = LifecyclePhase.VALIDATE,
+		requiresDependencyResolution = ResolutionScope.TEST)
 @Execute(phase = LifecyclePhase.TEST_COMPILE)
 public class RunMojo extends AbstractRunMojo {
 
@@ -52,10 +55,12 @@ public class RunMojo extends AbstractRunMojo {
 	 */
 	private Boolean hasDevtools;
 
-	@Override
-	protected boolean enableForkByDefault() {
-		return super.enableForkByDefault() || hasDevtools();
-	}
+	/**
+	 * Whether the JVM's launch should be optimized.
+	 * @since 2.2.0
+	 */
+	@Parameter(property = "spring-boot.run.optimizedLaunch", defaultValue = "true")
+	private boolean optimizedLaunch;
 
 	@Override
 	protected void logDisabledFork() {
@@ -66,19 +71,42 @@ public class RunMojo extends AbstractRunMojo {
 	}
 
 	@Override
-	protected void runWithForkedJvm(File workingDirectory, List<String> args,
-			Map<String, String> environmentVariables) throws MojoExecutionException {
-		try {
-			RunProcess runProcess = new RunProcess(workingDirectory,
-					new JavaExecutable().toString());
-			Runtime.getRuntime()
-					.addShutdownHook(new Thread(new RunProcessKiller(runProcess)));
-			int exitCode = runProcess.run(true, args, environmentVariables);
-			if (exitCode == 0 || exitCode == EXIT_CODE_SIGINT) {
-				return;
+	protected RunArguments resolveJvmArguments() {
+		RunArguments jvmArguments = super.resolveJvmArguments();
+		if (isFork() && this.optimizedLaunch) {
+			jvmArguments.getArgs().addFirst("-XX:TieredStopAtLevel=1");
+			if (!isJava13OrLater()) {
+				jvmArguments.getArgs().addFirst("-Xverify:none");
 			}
-			throw new MojoExecutionException(
-					"Application finished with exit code: " + exitCode);
+		}
+		return jvmArguments;
+	}
+
+	private boolean isJava13OrLater() {
+		for (Method method : String.class.getMethods()) {
+			if (method.getName().equals("stripIndent")) {
+				return true;
+			}
+		}
+		return false;
+	}
+
+	@Override
+	protected void runWithForkedJvm(File workingDirectory, List<String> args, Map<String, String> environmentVariables)
+			throws MojoExecutionException {
+		int exitCode = forkJvm(workingDirectory, args, environmentVariables);
+		if (exitCode == 0 || exitCode == EXIT_CODE_SIGINT) {
+			return;
+		}
+		throw new MojoExecutionException("Application finished with exit code: " + exitCode);
+	}
+
+	private int forkJvm(File workingDirectory, List<String> args, Map<String, String> environmentVariables)
+			throws MojoExecutionException {
+		try {
+			RunProcess runProcess = new RunProcess(workingDirectory, getJavaExecutable());
+			Runtime.getRuntime().addShutdownHook(new Thread(new RunProcessKiller(runProcess)));
+			return runProcess.run(true, args, environmentVariables);
 		}
 		catch (Exception ex) {
 			throw new MojoExecutionException("Could not exec java", ex);
@@ -86,11 +114,9 @@ public class RunMojo extends AbstractRunMojo {
 	}
 
 	@Override
-	protected void runWithMavenJvm(String startClassName, String... arguments)
-			throws MojoExecutionException {
+	protected void runWithMavenJvm(String startClassName, String... arguments) throws MojoExecutionException {
 		IsolatedThreadGroup threadGroup = new IsolatedThreadGroup(startClassName);
-		Thread launchThread = new Thread(threadGroup,
-				new LaunchRunner(startClassName, arguments), "main");
+		Thread launchThread = new Thread(threadGroup, new LaunchRunner(startClassName, arguments), "main");
 		launchThread.setContextClassLoader(new URLClassLoader(getClassPathUrls()));
 		launchThread.start();
 		join(threadGroup);
